Fix Trino connector correctness edge cases