@@ -13,14 +13,15 @@
  */
 package io.trino.plugin.trino;
 
+import com.google.common.collect.ImmutableSet;
 import io.trino.spi.connector.AggregateFunction;
 import io.trino.spi.connector.ConnectorSession;
 import io.trino.spi.expression.Call;
 import io.trino.spi.expression.ConnectorExpression;
-import io.trino.spi.expression.Constant;
 import io.trino.spi.expression.FunctionName;
 import io.trino.spi.expression.StandardFunctions;
 import io.trino.spi.type.ArrayType;
+import io.trino.spi.type.CharType;
 import io.trino.spi.type.DateType;
 import io.trino.spi.type.MapType;
 import io.trino.spi.type.RowType;
@@ -34,11 +35,12 @@ import io.trino.spi.type.VarcharType;
 import java.util.Locale;
 import java.util.Set;
 
+import static io.trino.plugin.trino.TrinoRemoteCapabilities.CharToVarcharCastSemantics.TRIMS_TRAILING_SPACES;
 import static java.util.Objects.requireNonNull;
 
 final class TrinoCompatibilityRegistry
 {
-    private static final Set<FunctionName> STANDARD_OPERATORS = Set.of(
+    private static final Set<FunctionName> STANDARD_OPERATORS = ImmutableSet.of(
             StandardFunctions.AND_FUNCTION_NAME,
             StandardFunctions.OR_FUNCTION_NAME,
             StandardFunctions.NOT_FUNCTION_NAME,
@@ -63,7 +65,7 @@ final class TrinoCompatibilityRegistry
             StandardFunctions.IN_PREDICATE_FUNCTION_NAME,
             StandardFunctions.ARRAY_CONSTRUCTOR_FUNCTION_NAME);
 
-    private static final Set<String> FUNCTION_ALLOWLIST = Set.of(
+    private static final Set<String> FUNCTION_ALLOWLIST = ImmutableSet.of(
             "abs",
             "array_distinct",
             "array_join",
@@ -77,8 +79,6 @@ final class TrinoCompatibilityRegistry
             "date",
             "date_add",
             "date_diff",
-            "date_format",
-            "date_parse",
             "date_trunc",
             "day",
             "day_of_month",
@@ -86,7 +86,6 @@ final class TrinoCompatibilityRegistry
             "day_of_year",
             "element_at",
             "floor",
-            "format_datetime",
             "from_iso8601_date",
             "from_iso8601_timestamp",
             "from_unixtime",
@@ -126,7 +125,7 @@ final class TrinoCompatibilityRegistry
             "with_timezone",
             "year");
 
-    private static final Set<String> SESSION_SENSITIVE_DENYLIST = Set.of(
+    private static final Set<String> SESSION_SENSITIVE_DENYLIST = ImmutableSet.of(
             "current_date",
             "current_time",
             "current_timestamp",
@@ -135,7 +134,7 @@ final class TrinoCompatibilityRegistry
             "localtimestamp",
             "now");
 
-    private static final Set<String> AGGREGATION_ALLOWLIST = Set.of(
+    private static final Set<String> AGGREGATION_ALLOWLIST = ImmutableSet.of(
             "avg",
             "checksum",
             "count",
@@ -151,13 +150,22 @@ final class TrinoCompatibilityRegistry
         requireNonNull(capabilities, "capabilities is null");
 
         FunctionName functionName = call.getFunctionName();
-        if (!isTypeSupported(call.getType())) {
-            return false;
-        }
-        if ((functionName.equals(StandardFunctions.CAST_FUNCTION_NAME) || functionName.equals(StandardFunctions.TRY_CAST_FUNCTION_NAME)) &&
-                isSessionSensitiveCast(call) &&
-                !capabilities.hasSameTimeZone(session)) {
-            return false;
+        if (functionName.equals(StandardFunctions.CAST_FUNCTION_NAME) || functionName.equals(StandardFunctions.TRY_CAST_FUNCTION_NAME)) {
+            CastCompatibility compatibility = castCompatibility(call);
+            CastSessionDependency dependency = compatibility.sessionDependency();
+            if (dependency == CastSessionDependency.UNSUPPORTED ||
+                    dependency == CastSessionDependency.SESSION_START ||
+                    (dependency == CastSessionDependency.TIME_ZONE && !capabilities.hasSameTimeZone(session))) {
+                return false;
+            }
+            if (compatibility.charToVarcharCastLocation() != CharToVarcharCastLocation.NONE &&
+                    capabilities.charToVarcharCastSemantics().isEmpty()) {
+                return false;
+            }
+            if (compatibility.charToVarcharCastLocation() == CharToVarcharCastLocation.NESTED &&
+                    capabilities.charToVarcharCastSemantics().orElseThrow() != TRIMS_TRAILING_SPACES) {
+                return false;
+            }
         }
         if (STANDARD_OPERATORS.contains(functionName)) {
             return true;
@@ -183,27 +191,8 @@ final class TrinoCompatibilityRegistry
     {
         requireNonNull(aggregate, "aggregate is null");
         requireNonNull(capabilities, "capabilities is null");
-        if (!isTypeSupported(aggregate.getOutputType())) {
-            return false;
-        }
         String name = aggregate.getFunctionName().toLowerCase(Locale.ENGLISH);
         return AGGREGATION_ALLOWLIST.contains(name) && capabilities.hasFunction(name);
-    }
-
-    private boolean isTypeSupported(Type type)
-    {
-        if (type instanceof ArrayType arrayType) {
-            return isTypeSupported(arrayType.getElementType());
-        }
-        if (type instanceof MapType mapType) {
-            return isTypeSupported(mapType.getKeyType()) && isTypeSupported(mapType.getValueType());
-        }
-        if (type instanceof RowType rowType) {
-            return rowType.getFields().stream()
-                    .map(RowType.Field::getType)
-                    .allMatch(this::isTypeSupported);
-        }
-        return true;
     }
 
     static String canonicalName(FunctionName functionName)
@@ -216,44 +205,148 @@ final class TrinoCompatibilityRegistry
         return name.equals("subscript") || name.equals("$operator$subscript");
     }
 
-    private static boolean isSessionSensitiveCast(Call call)
+    private static CastCompatibility castCompatibility(Call call)
     {
         if (call.getArguments().size() != 1) {
-            return true;
+            return new CastCompatibility(CastSessionDependency.SESSION_START, CharToVarcharCastLocation.NONE);
         }
         ConnectorExpression source = call.getArguments().getFirst();
-        Type sourceType = source.getType();
-        Type targetType = call.getType();
-        if (source instanceof Call sourceCall && hasExplicitTimeZone(sourceCall)) {
-            return false;
+        return castCompatibility(source.getType(), call.getType());
+    }
+
+    private static CastCompatibility castCompatibility(Type sourceType, Type targetType)
+    {
+        if (sourceType instanceof ArrayType sourceArray && targetType instanceof ArrayType targetArray) {
+            return castCompatibility(sourceArray.getElementType(), targetArray.getElementType()).nested();
         }
-        return removesSessionTimeZone(sourceType, targetType) || addsSessionTimeZone(sourceType, targetType);
+        if (sourceType instanceof MapType sourceMap && targetType instanceof MapType targetMap) {
+            return CastCompatibility.combine(
+                            castCompatibility(sourceMap.getKeyType(), targetMap.getKeyType()),
+                            castCompatibility(sourceMap.getValueType(), targetMap.getValueType()))
+                    .nested();
+        }
+        if (sourceType instanceof RowType sourceRow && targetType instanceof RowType targetRow) {
+            if (sourceRow.getFields().size() != targetRow.getFields().size()) {
+                return new CastCompatibility(CastSessionDependency.UNSUPPORTED, CharToVarcharCastLocation.NONE);
+            }
+            CastCompatibility compatibility = new CastCompatibility(CastSessionDependency.NONE, CharToVarcharCastLocation.NONE);
+            for (int index = 0; index < sourceRow.getFields().size(); index++) {
+                compatibility = CastCompatibility.combine(
+                        compatibility,
+                        castCompatibility(
+                                sourceRow.getFields().get(index).getType(),
+                                targetRow.getFields().get(index).getType()));
+            }
+            return compatibility.nested();
+        }
+
+        CharToVarcharCastLocation charToVarcharCastLocation =
+                sourceType instanceof CharType && targetType instanceof VarcharType
+                        ? CharToVarcharCastLocation.DIRECT
+                        : CharToVarcharCastLocation.NONE;
+
+        // These casts use the session start instant or its local date. Local and remote
+        // queries do not share a start instant, so matching time zones are insufficient.
+        if ((sourceType instanceof TimeType &&
+                (targetType instanceof TimeWithTimeZoneType || targetType instanceof TimestampType || targetType instanceof TimestampWithTimeZoneType)) ||
+                (sourceType instanceof TimeWithTimeZoneType &&
+                        (targetType instanceof TimestampType || targetType instanceof TimestampWithTimeZoneType)) ||
+                (sourceType instanceof TimestampType && targetType instanceof TimeWithTimeZoneType) ||
+                ((sourceType instanceof CharType || sourceType instanceof VarcharType) && targetType instanceof TimeWithTimeZoneType)) {
+            return new CastCompatibility(CastSessionDependency.SESSION_START, charToVarcharCastLocation);
+        }
+
+        // Casts that attach a time zone are safe only when the connector and remote
+        // sessions use the same zone.
+        if (((sourceType instanceof DateType || sourceType instanceof TimestampType || sourceType instanceof CharType || sourceType instanceof VarcharType) &&
+                targetType instanceof TimestampWithTimeZoneType)) {
+            return new CastCompatibility(CastSessionDependency.TIME_ZONE, charToVarcharCastLocation);
+        }
+
+        // Fail closed for temporal-to-temporal casts. Every valid pair is either
+        // classified above or explicitly known to be independent of session state.
+        if (isTemporalType(sourceType) && isTemporalType(targetType) && !isSessionIndependentTemporalCast(sourceType, targetType)) {
+            return new CastCompatibility(CastSessionDependency.UNSUPPORTED, charToVarcharCastLocation);
+        }
+        return new CastCompatibility(CastSessionDependency.NONE, charToVarcharCastLocation);
     }
 
-    private static boolean removesSessionTimeZone(Type sourceType, Type targetType)
+    private static boolean isTemporalType(Type type)
     {
-        return (sourceType instanceof TimestampWithTimeZoneType &&
-                (targetType instanceof DateType || targetType instanceof TimeType || targetType instanceof TimestampType)) ||
-                (sourceType instanceof TimeWithTimeZoneType && targetType instanceof TimeType);
+        return type instanceof DateType ||
+                type instanceof TimeType ||
+                type instanceof TimeWithTimeZoneType ||
+                type instanceof TimestampType ||
+                type instanceof TimestampWithTimeZoneType;
     }
 
-    private static boolean addsSessionTimeZone(Type sourceType, Type targetType)
+    private static boolean isSessionIndependentTemporalCast(Type sourceType, Type targetType)
     {
-        return ((sourceType instanceof DateType || sourceType instanceof TimestampType || sourceType instanceof VarcharType) && targetType instanceof TimestampWithTimeZoneType) ||
-                ((sourceType instanceof TimeType || sourceType instanceof VarcharType) && targetType instanceof TimeWithTimeZoneType);
+        return (sourceType instanceof DateType && (targetType instanceof DateType || targetType instanceof TimestampType)) ||
+                (sourceType instanceof TimeType && targetType instanceof TimeType) ||
+                (sourceType instanceof TimeWithTimeZoneType &&
+                        (targetType instanceof TimeType || targetType instanceof TimeWithTimeZoneType)) ||
+                (sourceType instanceof TimestampType &&
+                        (targetType instanceof DateType || targetType instanceof TimeType || targetType instanceof TimestampType)) ||
+                (sourceType instanceof TimestampWithTimeZoneType &&
+                        (targetType instanceof DateType || targetType instanceof TimeType || targetType instanceof TimeWithTimeZoneType ||
+                                targetType instanceof TimestampType || targetType instanceof TimestampWithTimeZoneType));
+    }
+
+    private enum CastSessionDependency
+    {
+        NONE,
+        TIME_ZONE,
+        SESSION_START,
+        UNSUPPORTED;
+
+        private static CastSessionDependency combine(CastSessionDependency first, CastSessionDependency second)
+        {
+            return first.ordinal() >= second.ordinal() ? first : second;
+        }
+    }
+
+    private enum CharToVarcharCastLocation
+    {
+        NONE,
+        DIRECT,
+        NESTED;
+
+        private static CharToVarcharCastLocation combine(CharToVarcharCastLocation first, CharToVarcharCastLocation second)
+        {
+            if (first == NESTED || second == NESTED) {
+                return NESTED;
+            }
+            if (first == DIRECT || second == DIRECT) {
+                return DIRECT;
+            }
+            return NONE;
+        }
+    }
+
+    private record CastCompatibility(
+            CastSessionDependency sessionDependency,
+            CharToVarcharCastLocation charToVarcharCastLocation)
+    {
+        private static CastCompatibility combine(CastCompatibility first, CastCompatibility second)
+        {
+            return new CastCompatibility(
+                    CastSessionDependency.combine(first.sessionDependency(), second.sessionDependency()),
+                    CharToVarcharCastLocation.combine(first.charToVarcharCastLocation(), second.charToVarcharCastLocation()));
+        }
+
+        private CastCompatibility nested()
+        {
+            if (charToVarcharCastLocation == CharToVarcharCastLocation.NONE) {
+                return this;
+            }
+            return new CastCompatibility(sessionDependency, CharToVarcharCastLocation.NESTED);
+        }
     }
 
     private static boolean usesSessionTimeZone(String name, Call call)
     {
         return (name.equals("from_unixtime") && call.getArguments().size() == 1) ||
                 name.equals("from_iso8601_timestamp");
-    }
-
-    private static boolean hasExplicitTimeZone(Call call)
-    {
-        String name = canonicalName(call.getFunctionName());
-        return (name.equals("at_timezone") || name.equals("with_timezone")) &&
-                call.getArguments().size() >= 2 &&
-                call.getArguments().get(1) instanceof Constant;
     }
 }
